chatbot/kubernetes/users-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: chatbot-user
          image: chatbot-user:latest
          ports:
            - containerPort: 80
