chatbot/kubernetes/tasks-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
spec:
  selector:
    app: tasks-service
  ports:
    - name: http
      port: 8080
      targetPort: 80
  type: LoadBalancer
