chatbot/kubernetes/users-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-service
  ports:
    - name: http
      port: 8081
      targetPort: 80
  type: LoadBalancer
